# code-summarizer

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  DOCKER.md  Dockerfile  LICENSE  Makefile  README.md  WINDOWS_DEPLOYMENT.md  config.yaml  debug_api.py  deploy-windows.bat  deploy_windows.py  docker-compose.multi.yml  docker-compose.single.yml  lint.sh  prompts.yaml  pyproject.toml  pytest.ini  run_api.py  run_tests.sh  setup_firewall.bat  test-docker-fix.md  test_analyze_endpoints.py  test_api.py  test_api_simple.py  test_config.py  test_config_overrides.py  test_external_access.py  test_frontend_config.html  test_security_fixes.py
.github/workflow/: codeql-analysis.yml
.github/workflows/: codeql.yml  lint-test.yml
app/: __init__.py  api_main.py  main.py
app/api/: deps.py
app/api/routes/: analyze.py  health.py
app/core/: config.py  context_manager.py  exceptions.py  logging_config.py  security.py
app/models/: requests.py  responses.py
app/services/: analysis_service.py  llm_client.py
app/utils/: file_handler.py  file_processor.py  markdown_formatter.py  prompt_loader.py
docker/api/: Dockerfile
docker/frontend/: Dockerfile  nginx.conf
docker/nginx/: nginx.conf
docker/scripts/: entrypoint.sh  frontend-entrypoint.sh  healthcheck.sh
docker/supervisor/: supervisord.conf
frontend/: DEPLOYMENT.md  Dockerfile  README.md  config.js  debug.html  index.html  nginx.conf  start.sh  test_frontend.html
frontend/css/: styles.css
frontend/js/: app.js
scripts/: run-local-dev.sh
src/code_summarizer/: __init__.py  context_manager.py  file_processor.py  llm_client.py  main.py  markdown_formatter.py  prompts.py
tests/: __init__.py  conftest.py  test_context_manager.py  test_file_processor.py  test_llm_client.py  test_main.py  test_markdown_formatter.py  test_prompts.py
tests/data/: sample.py
tests/integration/: test_api.py  test_cli.py
tests/unit/api/routes/: test_analyze.py  test_health.py
tests/unit/core/: test_config.py  test_context_manager.py  test_exceptions.py
tests/unit/models/: test_requests.py  test_responses.py
tests/unit/services/: test_analysis_service.py  test_llm_client.py
tests/unit/utils/: test_file_processor.py  test_markdown_formatter.py  test_prompt_loader.py
